# prometheus-temperature-sensor

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  README.md  settings.py
.reuse/: dep5
hardware/: .gitignore  temperature-sensor.kicad_pcb  temperature-sensor.kicad_pro  temperature-sensor.kicad_sch
src/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
src/components/config/: CMakeLists.txt  config.cpp  uart.cpp
src/components/config/include/config/: config.hpp  uart.hpp
src/components/sensor/: CMakeLists.txt  aht10.cpp
src/components/sensor/include/sensor/: aht10.hpp
src/components/webserver/: CMakeLists.txt  handlers.cpp  handlers.hpp  server.cpp  util.cpp
src/components/webserver/include/webserver/: server.hpp  util.hpp
src/main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.license  main.cpp  wlan.cpp  wlan.hpp
